--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div>
               <h3>Video Game Store Project</h3>
               <video src="./resources/cvgsclip.mp4" autoplay loop controls></video>
-              <p>ASP.NET Core MVC web app for viewing/purchasing games online.
+              <p>MVC web application for implementing an online video game store.
                 Cooperative semester-long project with three other team members.</p>
               <p class="bold">Stack: ASP.NET Core, Razor, SQLite</p>
             </div>
