--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><h2>Jakob Chisholm</h2></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <h2>Jakob Chisholm</h2>
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,8 +54,9 @@
         <div class="col-lg-8 mx-auto">
           <h1>About Me</h1>
           <img src="./resources/profile.jpg"></img>
-          <p>Hi, I'm Jakob. I'm a full stack developer in the Guelph/KW area and a recent Conestoga College grad. I'm
-            passionate about software, love experimentation, and love learning.</p>
+          <p>Hi, I'm Jakob. I'm a software developer in the Guelph/KW area. My areas
+            of experence/interest include Java and C# business app development and full-stack
+            web development using Node.</p>
         </div>
       </div>
     </div>
@@ -95,13 +98,21 @@
         <div class="col-lg-8 mx-auto">
           <h1>Contact</h1>
           <p id="links">
-            <a href="https://www.linkedin.com/in/jakobchisholm"><h3>LinkedIn</h3></a>
+            <a href="https://www.linkedin.com/in/jakobchisholm">
+              <h3>LinkedIn</h3>
+            </a>
             <br />
-            <a href="https://github.com/jakobchis"><h3>Github</h3></a>
+            <a href="https://github.com/jakobchis">
+              <h3>Github</h3>
+            </a>
             <br />
-            <a href="./resources/resume.pdf"><h3>Resume</h3></a>
+            <a href="./resources/resume.pdf">
+              <h3>Resume</h3>
+            </a>
             <br />
-            <a href="mailto:jakobchis@gmail.com"><h3>Email</h3></a>
+            <a href="mailto:jakobchis@gmail.com">
+              <h3>Email</h3>
+            </a>
             <br />
           </p>
         </div>
