Updated index text

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <div class="col-lg-8 mx-auto">
           <h1>About Me</h1>
           <img src="./resources/profile.jpg"></img>
-          <p>Hi, I'm Jakob. I'm a software developer in the Guelph/KW area. My areas
-            of experence/interest include Java and C# business app development and full-stack
-            web development using Node.</p>
+          <p>Hi, I'm Jakob. I'm a software developer in the Guelph/KW area. My main area of
+            interest is designing and building interactive, scaleable webapps using technologies
+            like Node and React. Looking to move into Angular, Vue, and other web technologies in the
+            future.</p>
         </div>
       </div>
     </div>
