modified intro paragraph

--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
         <div class="col-lg-8 mx-auto">
           <h1>About Me</h1>
           <img src="./resources/profile.jpg"></img>
-          <p>Hi, I'm Jakob. I'm a software developer in the Guelph/KW area. My main area of
-            interest is designing and building interactive, scaleable webapps using technologies
-            like Node and React. Looking to move into Angular, Vue, and other web technologies in the
-            future.</p>
+          <p>Hi, I'm Jakob. I'm a software developer in the Guelph/KW area. My main area of interest is designing and building modern, interactive, and scaleable web sites/applications using technologies like Node.js and React. As a side passion, I'm interested in devops and the deployment process and love using open-source solutions wherever possible.</p>
         </div>
       </div>
     </div>
