updated project descriptions

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
             <div>
               <h3>Property Rental Platform Project</h3>
               <video src="./resources/cottagecloudclip.mp4" autoplay loop controls></video>
-              <p>REST API and web front-end for viewing
-                and renting vacation properties. Cooperative semester-long
-                project with two other team members.</p>
+              <p>Website mockup for renting vacation properties featuring account registration, posting listings, filtering, and booking. Collaborative project with two team members consisting of a web front-end and REST API backend.</p>
               <p class="bold">Stack: React + React-Admin, Node.js +
                 Loopback, MongoDB</p>
             </div>
@@ -80,8 +78,7 @@
             <div>
               <h3>Video Game Store Project</h3>
               <video src="./resources/cvgsclip.mp4" autoplay loop controls></video>
-              <p>MVC web application for viewing, reviewing, and buying games online.
-                Cooperative semester-long project with three other team members.</p>
+              <p>Digital video game storefront mockup featuring account registration, game reviews, filtering, searching, and wishlist/cart functionalities. Collaborative project with three team members following an MVC web application design pattern.</p>
               <p class="bold">Stack: ASP.NET Core, Razor, SQLite</p>
             </div>
           </div>
