updated project descriptions

--- a/index.html
+++ b/index.html
@@ -69,16 +69,15 @@
             <div>
               <h3>Property Rental Platform Project</h3>
               <video src="./resources/cottagecloudclip.mp4" autoplay loop controls></video>
-              <p>Website mockup for renting vacation properties featuring account registration, posting listings, filtering, and booking. Collaborative project with two team members consisting of a web front-end and REST API backend.</p>
-              <p class="bold">Stack: React + React-Admin, Node.js +
-                Loopback, MongoDB</p>
+              <p>Website mockup and REST API backend for renting vacation properties featuring account registration, property listing, filtering, and property booking</p>
+              <p class="bold">Stack: Node.js, React, MongoDB</p>
             </div>
           </div>
           <div class="project-div">
             <div>
               <h3>Video Game Store Project</h3>
               <video src="./resources/cvgsclip.mp4" autoplay loop controls></video>
-              <p>Digital video game storefront mockup featuring account registration, game reviews, filtering, searching, and wishlist/cart functionalities. Collaborative project with three team members following an MVC web application design pattern.</p>
+              <p>Web application for buying digital games featuring account registration, game reviews, filtering, searching, and wishlist/cart functionalities</p>
               <p class="bold">Stack: ASP.NET Core, Razor, SQLite</p>
             </div>
           </div>
